force-app/main/default/objects/SBAA_Enablement_IDs__c/fields/Expired_RT__c.field-meta.xml
<CustomField>
    <fullName>Expired_RT__c</fullName>
    <label>Expired RT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>