force-app/main/default/objects/SBAA_Enablement_IDs__c/fields/Rejected_Quote_RT__c.field-meta.xml
<CustomField>
        <fullName>Rejected_Quote_RT__c</fullName>
        <label>Rejected Quote RT</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>